--- a/submissions.html
+++ b/submissions.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Giarratani Rising Star Award – Industry Studies Association</title>
+<title>submissions – Industry Studies Association</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -82,7 +82,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item">Giarratani Rising Star Award</li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./conference.html">Conference</a></li><li class="breadcrumb-item"><a href="./submissions.html">Submission Guidelines</a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -143,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container">
-  <a href="./submissions.html" class="sidebar-item-text sidebar-link">
+  <a href="./submissions.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Submission Guidelines</span></a>
   </div>
 </li>
@@ -165,82 +165,60 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
 
   <ul>
-  <li><a href="#giarratani-rising-star-award" id="toc-giarratani-rising-star-award" class="nav-link active" data-scroll-target="#giarratani-rising-star-award">Giarratani Rising Star Award</a>
+  <li><a href="#conference-submissions" id="toc-conference-submissions" class="nav-link active" data-scroll-target="#conference-submissions">Conference Submissions</a>
   <ul class="collapse">
-  <li><a href="#award-details" id="toc-award-details" class="nav-link" data-scroll-target="#award-details">Award Details</a></li>
-  <li><a href="#eligibility-requirements" id="toc-eligibility-requirements" class="nav-link" data-scroll-target="#eligibility-requirements">Eligibility Requirements</a></li>
-  <li><a href="#evaluation-criteria" id="toc-evaluation-criteria" class="nav-link" data-scroll-target="#evaluation-criteria">Evaluation Criteria</a></li>
-  <li><a href="#submission-process" id="toc-submission-process" class="nav-link" data-scroll-target="#submission-process">Submission Process</a></li>
-  <li><a href="#important-note" id="toc-important-note" class="nav-link" data-scroll-target="#important-note">Important Note</a></li>
+  <li><a href="#submission-guidelines" id="toc-submission-guidelines" class="nav-link" data-scroll-target="#submission-guidelines">Submission Guidelines</a></li>
+  <li><a href="#how-to-submit-via-microsoft-cmt" id="toc-how-to-submit-via-microsoft-cmt" class="nav-link" data-scroll-target="#how-to-submit-via-microsoft-cmt">How to Submit via Microsoft CMT</a></li>
+  <li><a href="#important-dates" id="toc-important-dates" class="nav-link" data-scroll-target="#important-dates">Important Dates</a></li>
+  <li><a href="#research-streams" id="toc-research-streams" class="nav-link" data-scroll-target="#research-streams">Research Streams</a></li>
+  <li><a href="#questions" id="toc-questions" class="nav-link" data-scroll-target="#questions">Questions?</a></li>
   </ul></li>
   </ul>
 </nav>
     </div>
 <!-- main -->
-<main class="content" id="quarto-document-content">
-
-<header id="title-block-header" class="quarto-title-block default">
-<div class="quarto-title">
-<h1 class="title">Giarratani Rising Star Award</h1>
-</div>
-
-
-
-<div class="quarto-title-meta">
+<main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./conference.html">Conference</a></li><li class="breadcrumb-item"><a href="./submissions.html">Submission Guidelines</a></li></ol></nav></header>
 
 
 
 
-  </div>
-
-
-
-</header>
-
-
-<section id="giarratani-rising-star-award" class="level2">
-<h2 class="anchored" data-anchor-id="giarratani-rising-star-award">Giarratani Rising Star Award</h2>
-<p>The Industry Studies Association offers annual recognition for emerging researchers through the Giarratani Rising Star Award.</p>
-<section id="award-details" class="level3">
-<h3 class="anchored" data-anchor-id="award-details">Award Details</h3>
+<section id="conference-submissions" class="level1">
+<h1>Conference Submissions</h1>
+<p>The Industry Studies Association invites researchers to submit abstracts for papers and organized panels to the 2026 Annual Conference, taking place June 3-5, 2026 at George Washington University in Washington, D.C.</p>
+<section id="submission-guidelines" class="level2">
+<h2 class="anchored" data-anchor-id="submission-guidelines">Submission Guidelines</h2>
+<p><strong>Single Papers:</strong> Submit abstracts of up to 250 words through Microsoft’s Academic Conference Management Toolkit.</p>
+<p><strong>Organized Panels:</strong> Include a panel description plus individual paper abstracts (250 words each) or panelist listings with roles. Panels should feature unifying themes—such as shared methodologies across industries or diverse approaches to common challenges. Panels incorporating practitioners from industry, government, or organizations receive particular encouragement.</p>
+</section>
+<section id="how-to-submit-via-microsoft-cmt" class="level2">
+<h2 class="anchored" data-anchor-id="how-to-submit-via-microsoft-cmt">How to Submit via Microsoft CMT</h2>
+<p>All submissions are handled through Microsoft CMT (Conference Management Toolkit), which is a separate website from the ISA site. You can create a CMT account using any email address—it will only be used for managing your conference submission and is not linked to your ISA website account. If you don’t already have a CMT account, you’ll be prompted to create one when you first visit the submission portal.</p>
+<p><a href="https://cmt3.research.microsoft.com/ISA2026/"><strong>Submit Your Paper via Microsoft CMT</strong></a></p>
+</section>
+<section id="important-dates" class="level2">
+<h2 class="anchored" data-anchor-id="important-dates">Important Dates</h2>
 <ul>
-<li><strong>First Prize:</strong> $1,000 honorarium</li>
-<li><strong>Runner-up Prize:</strong> $500 honorarium</li>
-<li>Non-winning papers may still qualify for the regular conference program</li>
+<li><strong>Submission Portal Opens:</strong> December 5, 2025</li>
+<li><strong>Submission Deadline:</strong> January 16, 2026</li>
+<li><strong>Decisions Announced:</strong> February 28, 2026</li>
 </ul>
 </section>
-<section id="eligibility-requirements" class="level3">
-<h3 class="anchored" data-anchor-id="eligibility-requirements">Eligibility Requirements</h3>
-<p>Applicants must meet the following criteria:</p>
+<section id="research-streams" class="level2">
+<h2 class="anchored" data-anchor-id="research-streams">Research Streams</h2>
+<p>Submitters choose from:</p>
 <ul>
-<li>Junior scholars no more than six years post-Ph.D.</li>
-<li>At least one co-author who is an early career scholar</li>
-<li>Papers cannot have been previously accepted for publication</li>
-<li>Individual scholars may submit only one paper to the competition</li>
+<li>Sustainable Innovation, Energy, and Mobility</li>
+<li>Public Policy and Global Competitiveness</li>
+<li>Health Care Systems, Biotechnology, and Pharmaceuticals</li>
+<li>Innovation, Entrepreneurship, and AI-Driven Transformation</li>
+<li>Labor Markets, Organizations, and the Future of Work</li>
+<li>Operations, Supply Chain, and AI-Enhanced Industry 4.0</li>
+<li>General Industry Studies</li>
 </ul>
 </section>
-<section id="evaluation-criteria" class="level3">
-<h3 class="anchored" data-anchor-id="evaluation-criteria">Evaluation Criteria</h3>
-<p>The award committee assesses two main areas:</p>
-<ol type="1">
-<li>Evidence of significant personal investment in developing an understanding of the markets, firms and institutions within relevant industries</li>
-<li>Demonstration of combining direct interaction and observation with appropriate theory and analysis</li>
-</ol>
-</section>
-<section id="submission-process" class="level3">
-<h3 class="anchored" data-anchor-id="submission-process">Submission Process</h3>
-<p>Candidates must complete three mandatory steps:</p>
-<ol type="1">
-<li>Submit via <a href="https://cmt3.research.microsoft.com/ISA2026/">Microsoft’s Academic Conference Management Toolkit (CMT)</a></li>
-<li>Upload an extended abstract and designate “Giarratani Rising Star Award” in the submission form</li>
-<li>Register for the conference and confirm attendance by early March</li>
-</ol>
-<p><strong>Submission Deadline:</strong> January 16, 2026</p>
-</section>
-<section id="important-note" class="level3">
-<h3 class="anchored" data-anchor-id="important-note">Important Note</h3>
-<p>Non-completion of any requirement results in automatic disqualification.</p>
-<p><a href="./conference.html">Return to Conference Page</a></p>
+<section id="questions" class="level2">
+<h2 class="anchored" data-anchor-id="questions">Questions?</h2>
+<p>For submission-related questions, please contact the Conference Chair: John Paul Helveston, George Washington University, <a href="mailto:jph@gwu.edu">jph@gwu.edu</a></p>
 
 
 </section>
