--- a/conference.html
+++ b/conference.html
@@ -17,7 +17,7 @@ div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
 ul.task-list{list-style: none;}
 ul.task-list li input[type="checkbox"] {
   width: 0.8em;
-  margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
+  margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */
   vertical-align: middle;
 }
 </style>
@@ -82,8 +82,8 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./conference.html">2026 Conference</a></li></ol></nav>
-        <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./conference.html">Conference</a></li><li class="breadcrumb-item"><a href="./conference.html">Call for Papers</a></li></ol></nav>
+        <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
         <i class="bi bi-search"></i>
@@ -106,34 +106,51 @@ ul.task-list li input[type="checkbox"] {
         <div id="quarto-search" class="" title="Search"></div>
         </div>
         </div>
-    <div class="sidebar-menu-container"> 
+    <div class="sidebar-menu-container">
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
+  <div class="sidebar-item-container">
   <a href="./index.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Home</span></a>
   </div>
 </li>
         <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
+  <div class="sidebar-item-container">
   <a href="./about.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">About</span></a>
   </div>
 </li>
         <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
+  <div class="sidebar-item-container">
   <a href="./mission.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Mission Statement</span></a>
   </div>
 </li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
+        <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container">
+            <a class="sidebar-item-text sidebar-link text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" role="navigation" aria-expanded="true">
+ <span class="menu-text">Conference</span></a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-1" role="navigation" aria-expanded="true" aria-label="Toggle section">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a>
+      </div>
+      <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">
+          <li class="sidebar-item">
+  <div class="sidebar-item-container">
   <a href="./conference.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text">2026 Conference</span></a>
+ <span class="menu-text">Call for Papers</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container">
+  <a href="./submissions.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Submission Guidelines</span></a>
+  </div>
+</li>
+      </ul>
+  </li>
         <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
+  <div class="sidebar-item-container">
   <a href="./awards.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Awards</span></a>
   </div>
@@ -146,16 +163,15 @@ ul.task-list li input[type="checkbox"] {
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
     <h2 id="toc-title">On this page</h2>
-   
+
   <ul>
   <li><a href="#industry-innovation-and-policy-in-uncertain-times" id="toc-industry-innovation-and-policy-in-uncertain-times" class="nav-link active" data-scroll-target="#industry-innovation-and-policy-in-uncertain-times">“Industry, Innovation, and Policy in Uncertain Times”</a>
   <ul class="collapse">
   <li><a href="#conference-overview" id="toc-conference-overview" class="nav-link" data-scroll-target="#conference-overview">Conference Overview</a></li>
   <li><a href="#conference-theme" id="toc-conference-theme" class="nav-link" data-scroll-target="#conference-theme">Conference Theme</a></li>
   <li><a href="#venue" id="toc-venue" class="nav-link" data-scroll-target="#venue">Venue</a></li>
-  <li><a href="#submission-guidelines" id="toc-submission-guidelines" class="nav-link" data-scroll-target="#submission-guidelines">Submission Guidelines</a></li>
+  <li><a href="#call-for-papers" id="toc-call-for-papers" class="nav-link" data-scroll-target="#call-for-papers">Call for Papers</a></li>
   <li><a href="#important-dates" id="toc-important-dates" class="nav-link" data-scroll-target="#important-dates">Important Dates</a></li>
-  <li><a href="#research-streams" id="toc-research-streams" class="nav-link" data-scroll-target="#research-streams">Research Streams</a></li>
   <li><a href="#awards" id="toc-awards" class="nav-link" data-scroll-target="#awards">Awards</a></li>
   <li><a href="#conference-committee" id="toc-conference-committee" class="nav-link" data-scroll-target="#conference-committee">Conference Committee</a></li>
   <li><a href="#contact-information" id="toc-contact-information" class="nav-link" data-scroll-target="#contact-information">Contact Information</a></li>
@@ -164,7 +180,7 @@ ul.task-list li input[type="checkbox"] {
 </nav>
     </div>
 <!-- main -->
-<main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"></header>
+<main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./conference.html">Conference</a></li><li class="breadcrumb-item"><a href="./conference.html">Call for Papers</a></li></ol></nav></header>
 
 
 
@@ -190,11 +206,10 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="venue">Venue</h2>
 <p>George Washington University sits in the nation’s capital, positioned near the White House, Congress, federal agencies, and policy institutions. The location also provides access to Washington’s innovation ecosystem, featuring clusters in cybersecurity, defense and aerospace, data and AI ventures, global development, and healthcare policy.</p>
 </section>
-<section id="submission-guidelines" class="level2">
-<h2 class="anchored" data-anchor-id="submission-guidelines">Submission Guidelines</h2>
-<p><strong>Single Papers:</strong> Submit abstracts of up to 250 words through Microsoft’s Academic Conference Management Toolkit.</p>
-<p><strong>Organized Panels:</strong> Include a panel description plus individual paper abstracts (250 words each) or panelist listings with roles. Panels should feature unifying themes—such as shared methodologies across industries or diverse approaches to common challenges. Panels incorporating practitioners from industry, government, or organizations receive particular encouragement.</p>
-<p><a href="https://cmt3.research.microsoft.com/ISA2026/"><strong>Submit Your Paper via Microsoft CMT</strong></a></p>
+<section id="call-for-papers" class="level2">
+<h2 class="anchored" data-anchor-id="call-for-papers">Call for Papers</h2>
+<p>The conference welcomes submissions for single papers and organized panels. The submission deadline is <strong>January 16, 2026</strong>. See the guidelines page for details:</p>
+<p><a href="./submissions.html"><strong>View Submission Guidelines</strong></a></p>
 </section>
 <section id="important-dates" class="level2">
 <h2 class="anchored" data-anchor-id="important-dates">Important Dates</h2>
@@ -202,19 +217,6 @@ ul.task-list li input[type="checkbox"] {
 <li><strong>Submission Portal Opens:</strong> December 5, 2025</li>
 <li><strong>Submission Deadline:</strong> January 16, 2026</li>
 <li><strong>Decisions Announced:</strong> February 28, 2026</li>
-</ul>
-</section>
-<section id="research-streams" class="level2">
-<h2 class="anchored" data-anchor-id="research-streams">Research Streams</h2>
-<p>Submitters choose from:</p>
-<ul>
-<li>Sustainable Innovation, Energy, and Mobility</li>
-<li>Public Policy and Global Competitiveness</li>
-<li>Health Care Systems, Biotechnology, and Pharmaceuticals</li>
-<li>Innovation, Entrepreneurship, and AI-Driven Transformation</li>
-<li>Labor Markets, Organizations, and the Future of Work</li>
-<li>Operations, Supply Chain, and AI-Enhanced Industry 4.0</li>
-<li>General Industry Studies</li>
 </ul>
 </section>
 <section id="awards" class="level2">
@@ -265,7 +267,7 @@ ul.task-list li input[type="checkbox"] {
     anchorJS.add('.anchored');
     const isCodeAnnotation = (el) => {
       for (const clz of el.classList) {
-        if (clz.startsWith('code-annotation-')) {                     
+        if (clz.startsWith('code-annotation-')) {
           return true;
         }
       }
@@ -285,11 +287,11 @@ ul.task-list li input[type="checkbox"] {
         button.setAttribute("data-bs-toggle", "tooltip");
         button.setAttribute("data-bs-placement", "left");
         button.setAttribute("data-bs-title", "Copied!");
-        tooltip = new bootstrap.Tooltip(button, 
-          { trigger: "manual", 
+        tooltip = new bootstrap.Tooltip(button,
+          { trigger: "manual",
             customClass: "code-copy-button-tooltip",
             offset: [0, -8]});
-        tooltip.show();    
+        tooltip.show();
       }
       setTimeout(function() {
         if (tooltip) {
@@ -366,7 +368,7 @@ ul.task-list li input[type="checkbox"] {
       if (onUntriggerFn) {
         config.onUntrigger = onUntriggerFn;
       }
-      window.tippy(el, config); 
+      window.tippy(el, config);
     }
     const noterefs = window.document.querySelectorAll('a[role="doc-noteref"]');
     for (var i=0; i<noterefs.length; i++) {
@@ -441,7 +443,7 @@ ul.task-list li input[type="checkbox"] {
       tippyHover(xref, undefined, function(instance) {
         instance.disable();
         let url = xref.getAttribute('href');
-        let hash = undefined; 
+        let hash = undefined;
         if (url.startsWith('#')) {
           hash = url;
         } else {
@@ -469,7 +471,7 @@ ul.task-list li input[type="checkbox"] {
               if (note !== null) {
                 const html = processXRef(id, note);
                 instance.setContent(html);
-              } 
+              }
             }).finally(() => {
               instance.enable();
               instance.show();
@@ -493,7 +495,7 @@ ul.task-list li input[type="checkbox"] {
               }
               const html = processXRef(null, note);
               instance.setContent(html);
-            } 
+            }
           }).finally(() => {
             instance.enable();
             instance.show();
@@ -533,7 +535,7 @@ ul.task-list li input[type="checkbox"] {
               height = bottom - top;
             }
             if (top !== null && height !== null && parent !== null) {
-              // cook up a div (if necessary) and position it 
+              // cook up a div (if necessary) and position it
               let div = window.document.getElementById("code-annotation-line-highlight");
               if (div === null) {
                 div = window.document.createElement("div");
